--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Application Form</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container ">
         <div class=" text-center mt-5 ">
 
             <h1>Application Form</h1>
@@ -24,12 +25,8 @@
             <div class="col-lg-10 mx-auto">
                 <div class="card mt-2 mx-auto bg-light">
                     <div class="card-body bg-light">
-
                         <div class="container">
                             <form id="contact-form" role="form">
-
-
-
                                 <div class="controls">
 
                                     <div class="row">
@@ -154,11 +151,16 @@
                                         </div>
                                         <div class="col-md-12">
                                             <p>Accept all our privacy & policy?</p>
-                                            <small>
-                                                <b>Data Protection:</b> I agree to the Boost Education Service Ltd processing personal data contained in this form. I agree to the processing of such data for any purposes connected with my studies or my health and safety whilst on the premises or for any legitimate reason including communication with me following the completion of my studies. In addition, I agree to the Boost Education Service Ltd processing personal data described as Special Category Data as defined under the General Data Protection Regulation(GDPR), such processing to be undertaken for any purposes as indicated in the declaration above. <br><br>
-
-<b>Declaration:</b> I confirm that the information given on this form is true, complete and accurate and that none of the information requested or other material information has been omitted. I accept that if it is discovered that I have supplied false, inaccurate or misleading information, Boost Education Service reserves the right to cancel my application, withdraw its offer of a place or terminate attendance at the University and I shall have no claim against Boost Education Service in relation thereto.
-                                            </small>
+                                            <p>
+                                                <small>
+                                                    <a href="#collapseItem1" data-toggle="collapse">Read Privacy Policy...</a>
+                                                    <p id="collapseItem1" class="collapse">
+                                                        <b>Data Protection:</b> I agree to the Boost Education Service Ltd 
+                                                    processing personal data contained in this form. I agree to the processing of such data for any purposes connected with my studies or my health and safety whilst on the premises or for any legitimate reason including communication with me following the completion of my studies. In addition, I agree to the Boost Education Service Ltd processing personal data described as Special Category Data as defined under the General Data Protection Regulation(GDPR), such processing to be undertaken for any purposes as indicated in the declaration above. <br><br>
+                                                        <b>Declaration:</b> I confirm that the information given on this form is true, complete and accurate and that none of the information requested or other material information has been omitted. I accept that if it is discovered that I have supplied false, inaccurate or misleading information, Boost Education Service reserves the right to cancel my application, withdraw its offer of a place or terminate attendance at the University and I shall have no claim against Boost Education Service in relation thereto.
+                                                    </p>
+                                                </small>
+                                            </p>
                                             <div class="pt-2">
                                                 <label class="radio-container mr-3">Yes
                                                     <input type="radio" checked="checked" name="existbtn">
@@ -196,7 +198,8 @@
 
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 
 </html>
